[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scene 2/Scene2.gd" type="Script" id=1]
[ext_resource path="res://Font/Poco.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 31
extra_spacing_top = -13
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 51.0
margin_top = 516.0
margin_right = 158.0
margin_bottom = 564.0
custom_fonts/font = SubResource( 1 )
text = "Back"

[node name="Button2" type="Button" parent="."]
margin_left = 874.0
margin_top = 516.0
margin_right = 981.0
margin_bottom = 564.0
custom_fonts/font = SubResource( 1 )
text = "Next"

[connection signal="draw" from="." to="." method="_on_Control_draw"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
